Fix for spacing of Start & Reset on all layouts

--- a/sass/app.css
+++ b/sass/app.css
@@ -173,20 +173,13 @@ html body {
 }
 
 #start-reset #start-button {
-  margin-right: 2vw;
+  margin-right: 4vw;
 }
 
 @media all and (min-height: 600px) {
   #start-reset #start-button,
   #start-reset #reset-button {
     padding: 2vw;
-  }
-}
-
-@media all and (min-width: 700px) {
-  #start-reset #start-button,
-  #start-reset #reset-button {
-    margin-right: 0.4vw;
   }
 }
 
