--- a/sass/sections/_start-reset.scss
+++ b/sass/sections/_start-reset.scss
@@ -16,7 +16,7 @@
   }
 
   #start-button {
-    margin-right: 2vw;
+    margin-right: 4vw;
   }
 }
 
@@ -25,15 +25,6 @@
     #start-button,
     #reset-button {
       padding: 2vw;
-    }
-  }
-}
-
-@media all and (min-width: 700px) {
-  #start-reset {
-    #start-button,
-    #reset-button {
-      margin-right: 0.4vw;
     }
   }
 }
